--- a/node34.html
+++ b/node34.html
@@ -114,7 +114,7 @@ a = 'a'+ { console.log("acción intermedia"); } 'b'+ {
                      return "hello world!";
                    }
 </PRE>
-Al compilar nos da un mensjae de error:
+Al compilar nos da un mensaje de error:
 <PRE>
 [~/srcPLgrado/pegjs/examples(master)]$ pegjs direct_intermedia.pegjs 
 1:48: Expected "/", ";", end of input or identifier but "'" found.
