--- a/node33.html
+++ b/node33.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1606"
+<A NAME="tex2html1607"
   HREF="node34.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1600"
+<A NAME="tex2html1601"
   HREF="node30.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1594"
+<A NAME="tex2html1595"
   HREF="node32.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1602"
+<A NAME="tex2html1603"
   HREF="node103.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1604"
+<A NAME="tex2html1605"
   HREF="node106.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1607"
+<B> Sig:</B> <A NAME="tex2html1608"
   HREF="node34.html">Acciones Intermedias</A>
-<B>Sup:</B> <A NAME="tex2html1601"
+<B>Sup:</B> <A NAME="tex2html1602"
   HREF="node30.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1595"
+<B> Ant:</B> <A NAME="tex2html1596"
   HREF="node32.html">PEGJS</A>
 <B> Con:</B> 
-<A NAME="tex2html1602"
+<A NAME="tex2html1603"
   HREF="node103.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1604"
+<A NAME="tex2html1605"
   HREF="node106.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,20 +103,22 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html1608"
-  HREF="node33.html#SECTION04430010000000000000">Donde</A>
 <LI><A NAME="tex2html1609"
-  HREF="node33.html#SECTION04430020000000000000">arithmetics.pegjs</A>
+  HREF="node33.html#SECTION04430010000000000000">Donde</A>
 <LI><A NAME="tex2html1610"
-  HREF="node33.html#SECTION04430030000000000000">main.js</A>
+  HREF="node33.html#SECTION04430020000000000000">arithmetics.pegjs</A>
 <LI><A NAME="tex2html1611"
-  HREF="node33.html#SECTION04430040000000000000">Rakefile</A>
+  HREF="node33.html#SECTION04430030000000000000">Parsing Expression Types</A>
 <LI><A NAME="tex2html1612"
-  HREF="node33.html#SECTION04430050000000000000">Compilación</A>
+  HREF="node33.html#SECTION04430040000000000000">main.js</A>
+<LI><A NAME="tex2html1613"
+  HREF="node33.html#SECTION04430050000000000000">Rakefile</A>
+<LI><A NAME="tex2html1614"
+  HREF="node33.html#SECTION04430060000000000000">Compilación</A>
 </UL>
 </UL>
 <BR>
-<LI><A NAME="tex2html1613"
+<LI><A NAME="tex2html1615"
   HREF="node33.html#SECTION04431000000000000000">Asociación Incorrecta para la Resta y la División</A>
 </UL>
 <!--End of Table of Child-Links-->
@@ -152,6 +154,22 @@ origin  git@github.com:crguezl/pegjs.git (push)
 arithmetics.pegjs</A>
 </H4>
   
+
+<P>
+The grammar syntax is similar to JavaScript in that it is not
+line-oriented and ignores whitespace between tokens. 
+
+<P>
+You can also use
+JavaScript-style comments (<code>// ...</code> and <code>/* ... */</code>).
+
+<P>
+Let's look at example grammar that recognizes simple arithmetic
+expressions like <code>2*(3+4)</code>. 
+
+<P>
+A parser generated from this grammar computes
+their values.
 
 <P>
 <PRE>
@@ -191,6 +209,40 @@ LEFTPAR = _"("_
 RIGHTPAR = _")"_
 NUMBER = _ digits:$[0-9]+ _ { return parseInt(digits, 10); }
 </PRE>
+
+<P>
+
+<UL>
+<LI>On the top level, the grammar consists of <A NAME="6091"></A><SPAN  CLASS="textbf">rules</SPAN>. 
+</LI>
+<LI>Each rule has a name (e.g. <code>primary</code>) that
+identifies the rule, and a 
+</LI>
+<LI><A NAME="6093"></A><SPAN  CLASS="textbf">parsing expression</SPAN> e.g. 
+<PRE>
+integer / LEFTPAR additive:additive RIGHTPAR { return additive; }
+</PRE>
+that defines a pattern to match
+against the input text and possibly contains some JavaScript code that
+determines what happens when the pattern matches successfully. 
+</LI>
+<LI>A rule
+can also contain human-readable name that is used in error messages
+(in our example, only the <code>integer</code> rule has a human-readable name). 
+</LI>
+<LI>The
+parsing starts at the first rule, which is also called the <A NAME="6095"></A><SPAN  CLASS="textbf">start rule</SPAN>.
+</LI>
+</UL>
+
+<P>
+
+<H4><A NAME="SECTION04430030000000000000">
+Parsing Expression Types</A>
+</H4>
+  
+
+<P>
 There are several types of parsing expressions, some of them containing
 subexpressions and thus forming a recursive structure:
 
@@ -222,7 +274,7 @@ Try to match the expression. If the match succeeds,
 
 <P>
 
-<H4><A NAME="SECTION04430030000000000000">
+<H4><A NAME="SECTION04430040000000000000">
 main.js</A>
 </H4>
   
@@ -237,7 +289,7 @@ console.log(r);
 
 <P>
 
-<H4><A NAME="SECTION04430040000000000000">
+<H4><A NAME="SECTION04430050000000000000">
 Rakefile</A>
 </H4>
   
@@ -261,7 +313,7 @@ end
 
 <P>
 
-<H4><A NAME="SECTION04430050000000000000">
+<H4><A NAME="SECTION04430060000000000000">
 Compilación</A>
 </H4>
   
@@ -282,7 +334,7 @@ Asociación Incorrecta para la Resta y la División</A>
 <P>
 <P>
 <DIV><B>Definición  <SPAN CLASS="arabic">4</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
-<I>Una <A NAME="6101"></A><SPAN  CLASS="textbf">gramática es recursiva por la izquierda</SPAN> cuando existe una derivación
+<I>Una <A NAME="6119"></A><SPAN  CLASS="textbf">gramática es recursiva por la izquierda</SPAN> cuando existe una derivación
 <!-- MATH
  $A \stackrel{*}{\Longrightarrow} A \alpha$
  -->
@@ -303,7 +355,7 @@ una regla de producción de la forma <!-- MATH
 En este caso se dice que la recursión por la izquierda es directa.</I></DIV><P></P>
 
 <P>
-Cuando la gramática es <A NAME="6103"></A><SPAN  CLASS="textbf">recursiva por la izquierda</SPAN>, 
+Cuando la gramática es <A NAME="6121"></A><SPAN  CLASS="textbf">recursiva por la izquierda</SPAN>, 
 el método 
 de análisis recursivo descendente predictivo no funciona. 
 En ese caso, el procedimiento
@@ -349,19 +401,19 @@ console.log(r);
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1606"
+<A NAME="tex2html1607"
   HREF="node34.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1600"
+<A NAME="tex2html1601"
   HREF="node30.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1594"
+<A NAME="tex2html1595"
   HREF="node32.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1602"
+<A NAME="tex2html1603"
   HREF="node103.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1604"
+<A NAME="tex2html1605"
   HREF="node106.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -401,11 +453,11 @@ console.log(r);
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1607"
+<B> Sig:</B> <A NAME="tex2html1608"
   HREF="node34.html">Acciones Intermedias</A>
-<B>Sup:</B> <A NAME="tex2html1601"
+<B>Sup:</B> <A NAME="tex2html1602"
   HREF="node30.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1595"
+<B> Ant:</B> <A NAME="tex2html1596"
   HREF="node32.html">PEGJS</A>
 </DIV>
 <!--End of Navigation Panel-->
