--- a/node33.html
+++ b/node33.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1607"
+<A NAME="tex2html1608"
   HREF="node34.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1601"
+<A NAME="tex2html1602"
   HREF="node30.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1595"
+<A NAME="tex2html1596"
   HREF="node32.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1603"
+<A NAME="tex2html1604"
   HREF="node103.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1605"
+<A NAME="tex2html1606"
   HREF="node106.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1608"
+<B> Sig:</B> <A NAME="tex2html1609"
   HREF="node34.html">Acciones Intermedias</A>
-<B>Sup:</B> <A NAME="tex2html1602"
+<B>Sup:</B> <A NAME="tex2html1603"
   HREF="node30.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1596"
+<B> Ant:</B> <A NAME="tex2html1597"
   HREF="node32.html">PEGJS</A>
 <B> Con:</B> 
-<A NAME="tex2html1603"
+<A NAME="tex2html1604"
   HREF="node103.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1605"
+<A NAME="tex2html1606"
   HREF="node106.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,22 +103,24 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html1609"
-  HREF="node33.html#SECTION04430010000000000000">Donde</A>
 <LI><A NAME="tex2html1610"
-  HREF="node33.html#SECTION04430020000000000000">arithmetics.pegjs</A>
+  HREF="node33.html#SECTION04430010000000000000">Donde</A>
 <LI><A NAME="tex2html1611"
-  HREF="node33.html#SECTION04430030000000000000">Parsing Expression Types</A>
+  HREF="node33.html#SECTION04430020000000000000">arithmetics.pegjs</A>
 <LI><A NAME="tex2html1612"
-  HREF="node33.html#SECTION04430040000000000000">main.js</A>
+  HREF="node33.html#SECTION04430030000000000000">Initializers</A>
 <LI><A NAME="tex2html1613"
-  HREF="node33.html#SECTION04430050000000000000">Rakefile</A>
+  HREF="node33.html#SECTION04430040000000000000">Parsing Expression Types</A>
 <LI><A NAME="tex2html1614"
-  HREF="node33.html#SECTION04430060000000000000">Compilación</A>
+  HREF="node33.html#SECTION04430050000000000000">main.js</A>
+<LI><A NAME="tex2html1615"
+  HREF="node33.html#SECTION04430060000000000000">Rakefile</A>
+<LI><A NAME="tex2html1616"
+  HREF="node33.html#SECTION04430070000000000000">Compilación</A>
 </UL>
 </UL>
 <BR>
-<LI><A NAME="tex2html1615"
+<LI><A NAME="tex2html1617"
   HREF="node33.html#SECTION04431000000000000000">Asociación Incorrecta para la Resta y la División</A>
 </UL>
 <!--End of Table of Child-Links-->
@@ -213,12 +215,12 @@ NUMBER = _ digits:$[0-9]+ _ { return parseInt(digits, 10); }
 <P>
 
 <UL>
-<LI>On the top level, the grammar consists of <A NAME="6095"></A><SPAN  CLASS="textbf">rules</SPAN>. 
+<LI>On the top level, the grammar consists of <A NAME="6102"></A><SPAN  CLASS="textbf">rules</SPAN>. 
 </LI>
 <LI>Each rule has a name (e.g. <code>primary</code>) that
 identifies the rule, and a 
 </LI>
-<LI><A NAME="6097"></A><SPAN  CLASS="textbf">parsing expression</SPAN> e.g. 
+<LI><A NAME="6104"></A><SPAN  CLASS="textbf">parsing expression</SPAN> e.g. 
 <PRE>
 integer / LEFTPAR additive:additive RIGHTPAR { return additive; }
 </PRE>
@@ -231,7 +233,7 @@ can also contain human-readable name that is used in error messages
 (in our example, only the <code>integer</code> rule has a human-readable name). 
 </LI>
 <LI>The
-parsing starts at the first rule, which is also called the <A NAME="6099"></A><SPAN  CLASS="textbf">start rule</SPAN>.
+parsing starts at the first rule, which is also called the <A NAME="6106"></A><SPAN  CLASS="textbf">start rule</SPAN>.
 </LI>
 </UL>
 
@@ -257,6 +259,60 @@ is allowed.
 <P>
 
 <H4><A NAME="SECTION04430030000000000000">
+Initializers</A>
+</H4>
+  
+
+<UL>
+<LI>Rules can be preceded by an <A NAME="6112"></A><SPAN  CLASS="textbf">initializer</SPAN> — a piece of JavaScript
+code in curly braces (<code>{</code> and <code>}</code>). 
+</LI>
+<LI>
+<FONT COLOR="#ff0000"> This code is executed
+before the generated parser starts parsing</FONT>
+</LI>
+<LI>All variables and functions
+defined in the initializer are accessible in rule actions and semantic
+predicates
+</LI>
+<LI>The code inside the initializer can access options passed to
+the parser using the options variable. 
+</LI>
+<LI>Curly braces in the initializer
+code must be balanced. 
+Let's look at a variant of the example grammar from above
+using a simple initializer.
+<PRE>
+{
+  function makeInteger(o) {
+    return parseInt(o.join(""), 10);
+  }
+}
+
+start
+  = additive
+
+additive
+  = left:multiplicative "+" right:additive { return left + right; }
+  / multiplicative
+
+multiplicative
+  = left:primary "*" right:multiplicative { return left * right; }
+  / primary
+
+primary
+  = integer
+  / "(" additive:additive ")" { return additive; }
+
+integer "integer"
+  = digits:[0-9]+ { return makeInteger(digits); }
+</PRE>
+</LI>
+</UL>
+
+<P>
+
+<H4><A NAME="SECTION04430040000000000000">
 Parsing Expression Types</A>
 </H4>
   
@@ -293,7 +349,7 @@ Try to match the expression. If the match succeeds,
 
 <P>
 
-<H4><A NAME="SECTION04430040000000000000">
+<H4><A NAME="SECTION04430050000000000000">
 main.js</A>
 </H4>
   
@@ -308,7 +364,7 @@ console.log(r);
 
 <P>
 
-<H4><A NAME="SECTION04430050000000000000">
+<H4><A NAME="SECTION04430060000000000000">
 Rakefile</A>
 </H4>
   
@@ -332,7 +388,7 @@ end
 
 <P>
 
-<H4><A NAME="SECTION04430060000000000000">
+<H4><A NAME="SECTION04430070000000000000">
 Compilación</A>
 </H4>
   
@@ -353,7 +409,7 @@ Asociación Incorrecta para la Resta y la División</A>
 <P>
 <P>
 <DIV><B>Definición  <SPAN CLASS="arabic">4</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
-<I>Una <A NAME="6123"></A><SPAN  CLASS="textbf">gramática es recursiva por la izquierda</SPAN> cuando existe una derivación
+<I>Una <A NAME="6138"></A><SPAN  CLASS="textbf">gramática es recursiva por la izquierda</SPAN> cuando existe una derivación
 <!-- MATH
  $A \stackrel{*}{\Longrightarrow} A \alpha$
  -->
@@ -374,7 +430,7 @@ una regla de producción de la forma <!-- MATH
 En este caso se dice que la recursión por la izquierda es directa.</I></DIV><P></P>
 
 <P>
-Cuando la gramática es <A NAME="6125"></A><SPAN  CLASS="textbf">recursiva por la izquierda</SPAN>, 
+Cuando la gramática es <A NAME="6140"></A><SPAN  CLASS="textbf">recursiva por la izquierda</SPAN>, 
 el método 
 de análisis recursivo descendente predictivo no funciona. 
 En ese caso, el procedimiento
@@ -420,19 +476,19 @@ console.log(r);
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1607"
+<A NAME="tex2html1608"
   HREF="node34.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1601"
+<A NAME="tex2html1602"
   HREF="node30.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1595"
+<A NAME="tex2html1596"
   HREF="node32.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1603"
+<A NAME="tex2html1604"
   HREF="node103.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1605"
+<A NAME="tex2html1606"
   HREF="node106.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -472,11 +528,11 @@ console.log(r);
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1608"
+<B> Sig:</B> <A NAME="tex2html1609"
   HREF="node34.html">Acciones Intermedias</A>
-<B>Sup:</B> <A NAME="tex2html1602"
+<B>Sup:</B> <A NAME="tex2html1603"
   HREF="node30.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1596"
+<B> Ant:</B> <A NAME="tex2html1597"
   HREF="node32.html">PEGJS</A>
 </DIV>
 <!--End of Navigation Panel-->
