--- a/node30.html
+++ b/node30.html
@@ -154,124 +154,128 @@ Análisis Descendente mediante Parsing Expresion Grammars en JavaScript</A>
 <LI><A NAME="tex2html1504"
   HREF="node33.html#SECTION04430020000000000000">arithmetics.pegjs</A>
 <LI><A NAME="tex2html1505"
-  HREF="node33.html#SECTION04430030000000000000">Initializers</A>
+  HREF="node33.html#SECTION04430030000000000000">PEG Syntax</A>
 <LI><A NAME="tex2html1506"
-  HREF="node33.html#SECTION04430040000000000000">Parsing Expression Types</A>
+  HREF="node33.html#SECTION04430040000000000000">Rules Syntax</A>
 <LI><A NAME="tex2html1507"
-  HREF="node33.html#SECTION04430050000000000000">main.js</A>
+  HREF="node33.html#SECTION04430050000000000000">Initializers</A>
 <LI><A NAME="tex2html1508"
-  HREF="node33.html#SECTION04430060000000000000">Rakefile</A>
+  HREF="node33.html#SECTION04430060000000000000">Parsing Expression Types</A>
 <LI><A NAME="tex2html1509"
-  HREF="node33.html#SECTION04430070000000000000">Compilación</A>
+  HREF="node33.html#SECTION04430070000000000000">main.js</A>
 <LI><A NAME="tex2html1510"
+  HREF="node33.html#SECTION04430080000000000000">Rakefile</A>
+<LI><A NAME="tex2html1511"
+  HREF="node33.html#SECTION04430090000000000000">Compilación</A>
+<LI><A NAME="tex2html1512"
   HREF="node33.html#SECTION04431000000000000000">Asociación Incorrecta para la Resta y la División</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1511"
+<LI><A NAME="tex2html1513"
   HREF="node34.html">Acciones Intermedias</A>
-<LI><A NAME="tex2html1512"
+<LI><A NAME="tex2html1514"
   HREF="node35.html">PegJS en los Browser</A>
 <UL>
-<LI><A NAME="tex2html1513"
-  HREF="node35.html#SECTION04450010000000000000">Donde</A>
-<LI><A NAME="tex2html1514"
-  HREF="node35.html#SECTION04450020000000000000">Versiones para Browser</A>
 <LI><A NAME="tex2html1515"
-  HREF="node35.html#SECTION04450030000000000000">La opción -e de pegjs</A>
+  HREF="node35.html#SECTION04450010000000000000">Donde</A>
 <LI><A NAME="tex2html1516"
-  HREF="node35.html#SECTION04450040000000000000">Compilación</A>
+  HREF="node35.html#SECTION04450020000000000000">Versiones para Browser</A>
 <LI><A NAME="tex2html1517"
-  HREF="node35.html#SECTION04450050000000000000">calc.js</A>
+  HREF="node35.html#SECTION04450030000000000000">La opción -e de pegjs</A>
 <LI><A NAME="tex2html1518"
-  HREF="node35.html#SECTION04450060000000000000">arithmetic.pegjs</A>
+  HREF="node35.html#SECTION04450040000000000000">Compilación</A>
 <LI><A NAME="tex2html1519"
+  HREF="node35.html#SECTION04450050000000000000">calc.js</A>
+<LI><A NAME="tex2html1520"
+  HREF="node35.html#SECTION04450060000000000000">arithmetic.pegjs</A>
+<LI><A NAME="tex2html1521"
   HREF="node35.html#SECTION04450070000000000000">calculator.html</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1520"
+<LI><A NAME="tex2html1522"
   HREF="node36.html">Eliminación de la Recursividad por la Izquierda en PEGs</A>
 <UL>
-<LI><A NAME="tex2html1521"
-  HREF="node36.html#SECTION04460010000000000000">Donde</A>
-<LI><A NAME="tex2html1522"
-  HREF="node36.html#SECTION04460020000000000000">PEGjs Coffee Plugin</A>
 <LI><A NAME="tex2html1523"
-  HREF="node36.html#SECTION04460030000000000000">Un Esquema de Traducción Recursivo por la Izquierda</A>
+  HREF="node36.html#SECTION04460010000000000000">Donde</A>
 <LI><A NAME="tex2html1524"
-  HREF="node36.html#SECTION04460040000000000000">Métodología</A>
+  HREF="node36.html#SECTION04460020000000000000">PEGjs Coffee Plugin</A>
 <LI><A NAME="tex2html1525"
+  HREF="node36.html#SECTION04460030000000000000">Un Esquema de Traducción Recursivo por la Izquierda</A>
+<LI><A NAME="tex2html1526"
+  HREF="node36.html#SECTION04460040000000000000">Métodología</A>
+<LI><A NAME="tex2html1527"
   HREF="node36.html#SECTION04460050000000000000">Solución</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1526"
+<LI><A NAME="tex2html1528"
   HREF="node37.html">Eliminando la Recursividad por la Izquierda en la Calculadora</A>
-<LI><A NAME="tex2html1527"
+<LI><A NAME="tex2html1529"
   HREF="node38.html">Eliminación de la Recursividad por la Izquierda y Atributos Heredados</A>
 <UL>
-<LI><A NAME="tex2html1528"
-  HREF="node38.html#SECTION04481000000000000000">Eliminación de la Recursión por la Izquierda en la Gramática</A>
-<LI><A NAME="tex2html1529"
-  HREF="node38.html#SECTION04482000000000000000">Eliminación de la Recursión por la Izquierda en un Esquema de Traducción</A>
 <LI><A NAME="tex2html1530"
+  HREF="node38.html#SECTION04481000000000000000">Eliminación de la Recursión por la Izquierda en la Gramática</A>
+<LI><A NAME="tex2html1531"
+  HREF="node38.html#SECTION04482000000000000000">Eliminación de la Recursión por la Izquierda en un Esquema de Traducción</A>
+<LI><A NAME="tex2html1532"
   HREF="node38.html#SECTION04483000000000000000">Eliminación de la Recursividad por la Izquierda en PEGJS</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1531"
+<LI><A NAME="tex2html1533"
   HREF="node39.html"><FONT COLOR="#ff0000"> Dangling else</FONT>: Asociando un else con su if mas cercano</A>
 <UL>
-<LI><A NAME="tex2html1532"
-  HREF="node39.html#SECTION04490010000000000000">danglingelse.pegjs</A>
-<LI><A NAME="tex2html1533"
-  HREF="node39.html#SECTION04490020000000000000">use_danglingelse.js</A>
 <LI><A NAME="tex2html1534"
-  HREF="node39.html#SECTION04490030000000000000">Ejecución</A>
+  HREF="node39.html#SECTION04490010000000000000">danglingelse.pegjs</A>
 <LI><A NAME="tex2html1535"
+  HREF="node39.html#SECTION04490020000000000000">use_danglingelse.js</A>
+<LI><A NAME="tex2html1536"
+  HREF="node39.html#SECTION04490030000000000000">Ejecución</A>
+<LI><A NAME="tex2html1537"
   HREF="node39.html#SECTION04490040000000000000">Donde</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1536"
+<LI><A NAME="tex2html1538"
   HREF="node40.html">Not Predicate: Comentarios Anidados</A>
 <UL>
-<LI><A NAME="tex2html1537"
-  HREF="node40.html#SECTION044100010000000000000">Pascal_comments.pegjs</A>
-<LI><A NAME="tex2html1538"
-  HREF="node40.html#SECTION044100020000000000000">use_pascal_comments.js</A>
 <LI><A NAME="tex2html1539"
-  HREF="node40.html#SECTION044100030000000000000">Ejecución</A>
+  HREF="node40.html#SECTION044100010000000000000">Pascal_comments.pegjs</A>
 <LI><A NAME="tex2html1540"
+  HREF="node40.html#SECTION044100020000000000000">use_pascal_comments.js</A>
+<LI><A NAME="tex2html1541"
+  HREF="node40.html#SECTION044100030000000000000">Ejecución</A>
+<LI><A NAME="tex2html1542"
   HREF="node40.html#SECTION044100040000000000000">Donde</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1541"
+<LI><A NAME="tex2html1543"
   HREF="node41.html">Un Lenguaje Dependiente del Contexto</A>
-<LI><A NAME="tex2html1542"
+<LI><A NAME="tex2html1544"
   HREF="node42.html">Usando Pegjs con CoffeeScript</A>
 <UL>
-<LI><A NAME="tex2html1543"
-  HREF="node42.html#SECTION044120010000000000000">Instalación de pegjs-coffee-plugin</A>
-<LI><A NAME="tex2html1544"
-  HREF="node42.html#SECTION044120020000000000000">Ejemplo Sencillo</A>
 <LI><A NAME="tex2html1545"
+  HREF="node42.html#SECTION044120010000000000000">Instalación de pegjs-coffee-plugin</A>
+<LI><A NAME="tex2html1546"
+  HREF="node42.html#SECTION044120020000000000000">Ejemplo Sencillo</A>
+<LI><A NAME="tex2html1547"
   HREF="node42.html#SECTION044120030000000000000">Véase También</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1546"
+<LI><A NAME="tex2html1548"
   HREF="node43.html">Práctica: Analizador de PL0 Ampliado Usando PEG.js</A>
 <UL>
-<LI><A NAME="tex2html1547"
-  HREF="node43.html#SECTION044130010000000000000">Donde</A>
-<LI><A NAME="tex2html1548"
-  HREF="node43.html#SECTION044130020000000000000">Tareas</A>
 <LI><A NAME="tex2html1549"
+  HREF="node43.html#SECTION044130010000000000000">Donde</A>
+<LI><A NAME="tex2html1550"
+  HREF="node43.html#SECTION044130020000000000000">Tareas</A>
+<LI><A NAME="tex2html1551"
   HREF="node43.html#SECTION044130030000000000000">Referencias para esta Práctica</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1550"
+<LI><A NAME="tex2html1552"
   HREF="node44.html">Práctica: Ambiguedad en C++</A>
-<LI><A NAME="tex2html1551"
+<LI><A NAME="tex2html1553"
   HREF="node45.html">Práctica: Inventando un Lenguaje: Tortoise</A>
 <UL>
-<LI><A NAME="tex2html1552"
+<LI><A NAME="tex2html1554"
   HREF="node45.html#SECTION044150010000000000000">Recursos</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
