--- a/node33.html
+++ b/node33.html
@@ -333,6 +333,15 @@ Parsing Expression Types</A>
 </H4>
   
 
+The parsing expressions of the rules are used to match the input text to the grammar.
+
+<P>
+There are various types of expressions — matching characters or
+character classes, indicating optional parts and repetition, etc.
+
+<P>
+Expressions can also contain references to other rules. 
+
 <P>
 There are several types of parsing expressions, some of them containing
 subexpressions and thus forming a recursive structure:
